--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -511,6 +511,12 @@ body
                                 right: 0;   top: 50%;
                                 margin-top: -8px;   margin-right: 20px;
                             }
+
+                            .progress
+                            {
+                                border-radius: initial;
+                                height: 1px;    
+                            }
                         }
 
                         .msg-client
