--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -479,7 +479,7 @@ body
                         color: $concrete;
                         padding: 5px 0;
                         background: lighten($purple, 50%);
-                        margin: 10px 0;
+                        margin: 15px 0;
                         color: $purple;
                     }
 
@@ -487,7 +487,7 @@ body
                     {
                         @extend #LEFT, #NO-PADDING, #NO-MARGIN;
                         width: $full-width;
-                        margin: 5px 0;
+                        margin: 10px 0;
 
                         .box-msg
                         {
@@ -512,10 +512,63 @@ body
                                 margin-top: -8px;   margin-right: 20px;
                             }
 
-                            .progress
+                            .progress-pl, .progress-pl-bar
                             {
-                                border-radius: initial;
-                                height: 1px;    
+                                @extend #ABSOLUTE;
+                                height: 1px;
+                                left: 0; bottom: 0;
+                            }
+
+                            .progress-pl
+                            {
+                                width: 95%;
+                                background: $dark-silver;
+
+                                .progress-pl-bar
+                                {   
+                                    background: $danger;
+
+                                    .timer-prgress
+                                    {
+                                        @extend #ABSOLUTE;
+                                        background: $danger;
+                                        right: 0;
+                                        color: $light;
+                                        font-size: 10px;
+                                        padding: 2px 5px;
+                                        border-radius: 5px;
+                                        margin-top: -10px;
+                                    }
+                                }
+                            }
+
+                            .answered
+                            {
+                                .progress-pl-bar
+                                {
+                                    background: $purple;
+                                    
+                                    .timer-prgress
+                                    {
+                                        background: $purple;
+
+                                        &::after
+                                        {
+                                            -moz-osx-font-smoothing: grayscale;
+                                            -webkit-font-smoothing: antialiased;
+                                            display: inline-block;
+                                            font-style: normal;
+                                            font-variant: normal;
+                                            text-rendering: auto;
+                                            line-height: 1;
+                                            font-family: "Font Awesome 5 Free";
+                                            margin-left: 5px;
+                                            color: $success;
+                                            font-weight: 900;
+                                            content: "\f00c";
+                                        }
+                                    }
+                                }
                             }
                         }
 
@@ -523,12 +576,14 @@ body
                         {
                             @extend #LEFT;
                             background: $silver;
+                            border-bottom-left-radius: 0;
                         }
 
                         .msg-operator
                         {
                             @extend #RIGHT;
                             background: $black-silver;
+                            border-bottom-right-radius: 0;
                         }
                     }
                 }
