--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -16,6 +16,6 @@ $dark-concrete:     #666666;
 $pink:              #EB3067;
 $purple:            #515067;
 $success:           #42CB13;
-$danger:            #EB3067;
+$danger:            #CB3F13;
 $dark-purple:       #213847;
 $yellow:            #EA9531;
