--- a/src/css/app.css
+++ b/src/css/app.css
@@ -10371,7 +10371,7 @@ template {
   position: relative;
 }
 
-#ABSOLUTE, body #interactions .left-sb, body #interactions .left-sb .sidebar ul > li .notif, body #interactions .teto, body #interactions .content, body #interactions .content .area-msg .main-msg, body #interactions .content .area-msg .main-msg .msg-info .box-msg .time-msg, body #interactions .content .area-msg .main-msg .msg-info .box-msg .progress-pl, body #interactions .content .area-msg .main-msg .msg-info .box-msg .progress-pl-bar, body #interactions .content .area-msg .main-msg .msg-info .box-msg .progress-pl .progress-pl-bar .timer-prgress, body #interactions .content .area-msg .toolsbar-msg, body #interactions .content .area-msg .toolsbar-msg ul.icon-action {
+#ABSOLUTE, body #interactions .left-sb, body #interactions .left-sb .sidebar ul > li .notif, body #interactions .teto, body #interactions .content, body #interactions .content .area-msg .main-msg, body #interactions .content .area-msg .main-msg .msg-info .box-msg .time-msg, body #interactions .content .area-msg .main-msg .msg-info .box-msg .drop-action, body #interactions .content .area-msg .main-msg .msg-info .box-msg .progress-pl, body #interactions .content .area-msg .main-msg .msg-info .box-msg .progress-pl-bar, body #interactions .content .area-msg .main-msg .msg-info .box-msg .progress-pl .progress-pl-bar .timer-prgress, body #interactions .content .area-msg .toolsbar-msg, body #interactions .content .area-msg .toolsbar-msg ul.icon-action {
   position: absolute;
 }
 
@@ -10439,7 +10439,7 @@ template {
   font-style: italic;
 }
 
-#NO-BORDER, body #interactions .teto ul.nav.nav-tabs li, body #interactions .teto ul.nav.nav-tabs li a, body #interactions .teto ul.nav.nav-tabs li.active, body #interactions .content .area-msg .tools .btn, body #interactions .content .area-msg .toolsbar-msg .textbox textarea.send-new-msg, body #interactions .content .area-msg .toolsbar-msg .textbox button {
+#NO-BORDER, body #interactions .teto ul.nav.nav-tabs li, body #interactions .teto ul.nav.nav-tabs li a, body #interactions .teto ul.nav.nav-tabs li.active, body #interactions .content .area-msg .tools .btn, body #interactions .content .area-msg .main-msg .msg-info .box-msg .drop-action, body #interactions .content .area-msg .toolsbar-msg .textbox textarea.send-new-msg, body #interactions .content .area-msg .toolsbar-msg .textbox button {
   border: none;
 }
 
@@ -10499,7 +10499,7 @@ template {
   text-align: center;
 }
 
-#NO-BORDER, body #interactions .teto ul.nav.nav-tabs li, body #interactions .teto ul.nav.nav-tabs li a, body #interactions .teto ul.nav.nav-tabs li.active, body #interactions .content .area-msg .tools .btn, body #interactions .content .area-msg .toolsbar-msg .textbox textarea.send-new-msg, body #interactions .content .area-msg .toolsbar-msg .textbox button {
+#NO-BORDER, body #interactions .teto ul.nav.nav-tabs li, body #interactions .teto ul.nav.nav-tabs li a, body #interactions .teto ul.nav.nav-tabs li.active, body #interactions .content .area-msg .tools .btn, body #interactions .content .area-msg .main-msg .msg-info .box-msg .drop-action, body #interactions .content .area-msg .toolsbar-msg .textbox textarea.send-new-msg, body #interactions .content .area-msg .toolsbar-msg .textbox button {
   border: none;
 }
 
@@ -10913,6 +10913,7 @@ body #interactions .content .area-msg .main-msg .ct-msg {
   width: 100%;
   height: 100%;
   padding: 0 25px;
+  padding-bottom: 20px;
 }
 
 body #interactions .content .area-msg .main-msg .date-msg {
@@ -10922,7 +10923,7 @@ body #interactions .content .area-msg .main-msg .date-msg {
   color: #999999;
   padding: 5px 0;
   background: #d7d6e0;
-  margin: 15px 0;
+  margin: 20px 0;
   color: #515067;
 }
 
@@ -10933,7 +10934,7 @@ body #interactions .content .area-msg .main-msg .msg-info {
 
 body #interactions .content .area-msg .main-msg .msg-info .box-msg {
   border-radius: 15px;
-  padding: 10px 20px;
+  padding: 15px 20px;
   min-width: 25%;
   max-width: 80%;
   padding-right: 60px;
@@ -10951,7 +10952,17 @@ body #interactions .content .area-msg .main-msg .msg-info .box-msg .time-msg {
   right: 0;
   top: 50%;
   margin-top: -8px;
-  margin-right: 20px;
+  margin-right: 30px;
+}
+
+body #interactions .content .area-msg .main-msg .msg-info .box-msg .drop-action {
+  font-size: 10px;
+  color: #515067;
+  right: 0;
+  top: 50%;
+  margin-top: -8px;
+  margin-right: 10px;
+  background: transparent;
 }
 
 body #interactions .content .area-msg .main-msg .msg-info .box-msg .progress-pl, body #interactions .content .area-msg .main-msg .msg-info .box-msg .progress-pl-bar {
@@ -11011,6 +11022,10 @@ body #interactions .content .area-msg .main-msg .msg-info .msg-operator {
   background: #D8D8D8;
   border-bottom-right-radius: 0;
   padding-right: 65px;
+}
+
+body #interactions .content .area-msg .main-msg .msg-info .msg-operator .time-msg {
+  margin-right: 20px;
 }
 
 body #interactions .content .area-msg .main-msg .msg-info .time-msg::before {
