--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -469,6 +469,7 @@ body
                         @include default;
                         @extend #OVERFLOW;
                         padding: 0 25px;
+                        padding-bottom: 20px;
                     }
 
                     .date-msg
@@ -479,7 +480,7 @@ body
                         color: $concrete;
                         padding: 5px 0;
                         background: lighten($purple, 50%);
-                        margin: 15px 0;
+                        margin: 20px 0;
                         color: $purple;
                     }
 
@@ -493,7 +494,7 @@ body
                         {
                             @extend #RELATIVE;
                             border-radius: 15px;
-                            padding: 10px 20px;
+                            padding: 15px 20px;
                             min-width: 25%; max-width: 80%;
                             padding-right: 60px;
     
@@ -509,7 +510,17 @@ body
                                 font-weight: bold;  font-size: 10px;
                                 color: $purple;
                                 right: 0;   top: 50%;
-                                margin-top: -8px;   margin-right: 20px;
+                                margin-top: -8px;   margin-right: 30px;
+                            }
+
+                            .drop-action
+                            {
+                                @extend #ABSOLUTE, #NO-BORDER;
+                                font-size: 10px;
+                                color: $purple;
+                                right: 0;   top: 50%;
+                                margin-top: -8px;   margin-right: 10px;
+                                background: transparent;
                             }
 
                             .progress-pl, .progress-pl-bar
@@ -585,6 +596,9 @@ body
                             background: $black-silver;
                             border-bottom-right-radius: 0;
                             padding-right: 65px;
+
+                            .time-msg
+                            { margin-right: 20px; }
                         }
 
                         .time-msg::before
