--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -588,6 +588,51 @@ body
                             @extend #LEFT;
                             background: $silver;
                             border-bottom-left-radius: 0;
+
+                            ul.toggle-action
+                            {
+                                @extend #ABSOLUTE, #HIDE; 
+                                padding: 5px 0;
+                                background: $light;
+                                min-width: 170px;
+                                z-index: 1;
+                                -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+                                -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+                                box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+
+                                li
+                                {
+                                    @extend #LEFT;
+                                    width: $full-width;
+
+                                    a
+                                    {
+                                        @extend #LEFT, #NO-UNDERLINE;
+                                        width: $full-width;
+                                        font-size: 12px;    font-weight: 400;
+                                        color: $purple;
+                                        padding: 5px 15px;
+
+                                        &:hover
+                                        {
+                                            color: $pink;
+                                            background: $silver;
+                                        }
+                                    }
+                                }
+
+                                li.active a
+                                {
+                                    color: $pink;
+                                    background: $silver;
+                                }
+                            }
+
+                            .dp-active
+                            { color: $pink; }
+
+                            ul.active-tg
+                            { @extend #SHOW; }
                         }
 
                         .msg-operator
@@ -642,7 +687,7 @@ body
                     width: $full-width; height: 50px;
                     bottom: 0;
                     background: $light;
-                    z-index: 1;
+                    z-index: 2;
 
                     .textbox
                     {
